--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <!-- <div class="todo">
                 <li></li>
                 <button></button>
+                <button></button> 
             </div> -->
         </ul>
     </div>
